<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingHorizontal="24dp"
              android:paddingTop="16dp"
              android:paddingBottom="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/share_article_input_title"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/share_article_input_hint_title"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/share_article_input_link"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/share_article_input_hint_link"
            android:inputType="textUri"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/user_tools_name"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mine_guest_display_name"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
