<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingHorizontal="@dimen/app_spacing_xl"
              android:paddingTop="@dimen/app_spacing_lg"
              android:paddingBottom="@dimen/app_spacing_sm">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_tools_name"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_tools_hint_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_spacing_md"
        android:hint="@string/user_tools_link"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_tools_hint_link"
            android:inputType="textUri"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
